# RI

./: .gitignore  CHANGELOG.md  CONVERSION_COMPLETE.md  DATABASE_UPGRADE_PLAN.md  FILE_STORAGE_PLAN.md  FIX_MODE_NOTES_ISOLATION.md  INTEGRATION_SUMMARY.md  LINK_FEATURE.md  MARKDOWN_DRAG_FEATURE.md  NOTE_BUTTONS.md  NOTE_FEATURE.md  QUICKSTART.md  QUICK_TEST.md  README-ELECTRON.md  README.md  SECURITY.md  SECURITY_ASSESSMENT_SUMMARY.md  SECURITY_REVIEW_CN.md  STATUSBAR_PLAN.md  STYLE_CHANGES.md  SUBMISSION_NOTES.md  TEST_MARKDOWN_DRAG.md  TROUBLESHOOTING.md  TROUBLESHOOTING_WINDOW_SPACE.md  UPDATE_GUIDE.md  WARP.md  app.js  background.js  clean-start.sh  content.js  electron-main.js  electron-preload.js  index.html  manifest.json  note-editor.css  note-window.html  note-window.js  offscreen.html  offscreen.js  package-electron.json  (+8 more)
.cunzhi-memory/: context.md  metadata.json  sessions.md
Notebook-Mac/: electron-mac.js  electron-preload.js  index.html  package-mac.json  start-mac.sh
Notebook-Mac/Notebook-Mac/Notebook-Mac/: ContentView.swift  HotKeyManager.swift  Notebook_MacApp.swift  app.js  note-window.html  note-window.js  style.css
Notebook-Mac/Notebook-Mac/Notebook-Mac.xcodeproj/: project.pbxproj
Notebook-Mac/Notebook-Mac/Notebook-MacTests/: Notebook_MacTests.swift
src/: db.js  fileStorage.js  gitSync.js  main.ts  migrate.js  security.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_rgba_icon.py  icon.icns
src-tauri/src/: lib.rs  main.rs
src/utils/: clipboard.ts  notification.ts  shortcut.ts
(+8 files in other folders)
